# nlp-classifiers-transformers

./: .gitignore  .pre-commit-config.yaml  README.md  environment.yml  pyproject.toml
notebooks/: decoder.ipynb  encoder-decoder.ipynb  encoder.ipynb  prompting.ipynb
src/: config.py  dataset.py
